<resources>
    <string name="app_name">Student Budget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_budget">Budget</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_categories">Categories</string>

    <string name="tab_text_1">Week</string>
    <string name="tab_text_2">Month</string>
    <string name="expenses_heading">Expenses</string>

    <string name="week_edit_budget_button">Edit weekly budget</string>
    <string name="month_edit_budget_button">Edit monthly budget</string>

    <string name="weekly_budget_history">Weekly Budget History</string>
    <string name="monthly_budget_history">Monthly Budget History</string>

    <string name="week_largest_expenses_text">Largest expenses this week:</string>
    <string name="month_largest_expenses_text">Largest expenses this month:</string>

    <string name="name_text">Name</string>
    <string name="category_text">Category</string>
    <string name="price_text">Price</string>
    <string name="date_text">Date</string>

    <string name="add_expense_button">Add expense</string>
    <string name="recent_expenses_text">Recent expenses:</string>

    <string name="add_expense_button_text">Add Expense</string>
    <string name="expense_name">Name</string>
    <string name="hint_expense_name">Enter expense name</string>
    <string name="expense_price">Price</string>
    <string name="hint_expense_price">Enter expense price (£)</string>
    <string name="expense_category">Category</string>
    <string name="expense_date">Date</string>
    <string name="expense_today">Today?</string>


    <string name="categories_heading">Categories</string>
    <string name="add_category_button">Add Category</string>
    <string name="my_categories_subheading">My Categories:</string>

    <string name="category_name">Name</string>
    <string name="category_colour">Colour</string>
    <string name="hint_category_name">Enter Category Name</string>
    <string name="confirm">Select</string>
    <string name="cancel">Cancel</string>

    <string name="set_colour_button">Set Colour</string>

    <string name="new_budget_text">New budget:</string>

    <string name="my_budget">Budget:</string>
    <string name="my_expenses">Expenses:</string>

    <string name="view_category_heading">View Category</string>
    <string name="delete_category_button">Delete Category</string>
    <string name="category_already_exists_text">A category with that name\nalready exists.</string>

    <string name="view_all_expenses">View All Expenses</string>
    <string name="my_expenses_heading">My Expenses</string>
    <string name="view_expense_text">View Expense</string>

    <string name="save_button">Save</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>

    <string name="category_filter_text">Filter by\ncategory</string>

</resources>
