<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addExpenseHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_expense_button"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_heading"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expenseNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/expense_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addExpenseHeadingTextView" />

        <EditText
            android:id="@+id/expenseNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/hint_expense_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/expenseNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expenseNameTextView"
            app:layout_constraintTop_toTopOf="@+id/expenseNameTextView" />

        <TextView
            android:id="@+id/expensePriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_price"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/expensePriceEditText"
            app:layout_constraintStart_toStartOf="@+id/expenseNameTextView"
            app:layout_constraintTop_toTopOf="@+id/expensePriceEditText" />

        <EditText
            android:id="@+id/expensePriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_expense_price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/expenseNameEditText"
            app:layout_constraintStart_toStartOf="@+id/expenseNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/expenseNameEditText" />

        <TextView
            android:id="@+id/expenseCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_category"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/expenseCategorySpinner"
            app:layout_constraintStart_toStartOf="@+id/expensePriceTextView"
            app:layout_constraintTop_toTopOf="@+id/expenseCategorySpinner" />

        <Spinner
            android:id="@+id/expenseCategorySpinner"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/expensePriceEditText"
            app:layout_constraintStart_toStartOf="@+id/expensePriceEditText"
            app:layout_constraintTop_toBottomOf="@+id/expensePriceEditText" />

        <Button
            android:id="@+id/expenseSaveButton"
            android:layout_width="@dimen/wide_button"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/save_button"
            android:textSize="@dimen/text_size_button"
            app:layout_goneMarginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseDateDP" />

        <TextView
            android:id="@+id/expenseDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_date"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/expenseTodayCheckBox"
            app:layout_constraintStart_toStartOf="@+id/expenseCategoryTextView"
            app:layout_constraintTop_toTopOf="@+id/expenseTodayCheckBox" />

        <CheckBox
            android:id="@+id/expenseTodayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/expense_today"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/expenseCategorySpinner"
            app:layout_constraintTop_toBottomOf="@+id/expenseCategorySpinner" />

        <DatePicker
            android:id="@+id/expenseDateDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:ems="10"
            android:inputType="date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/expenseCategorySpinner"
            app:layout_constraintStart_toStartOf="@+id/expenseCategorySpinner"
            app:layout_constraintTop_toBottomOf="@+id/expenseTodayCheckBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>