<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/addCategoryHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_category_button"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_heading"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/categoryNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/category_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCategoryHeadingTextView" />

        <EditText
            android:id="@+id/categoryNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/hint_category_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/categoryNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/categoryNameTextView"
            app:layout_constraintTop_toTopOf="@+id/categoryNameTextView" />

        <TextView
            android:id="@+id/categoryColourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/category_colour"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/categoryNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/categoryNameTextView" />

        <Button
            android:id="@+id/setColourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/set_colour_button"
            app:layout_constraintBottom_toBottomOf="@+id/categorySelectedColourView"
            app:layout_constraintStart_toEndOf="@+id/categorySelectedColourView"
            app:layout_constraintTop_toTopOf="@+id/categorySelectedColourView" />

        <View
            android:id="@+id/categorySelectedColourView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="@+id/categoryNameEditText"
            app:layout_constraintTop_toTopOf="@+id/categoryColourTextView" />

        <Button
            android:id="@+id/categorySaveButton"
            android:layout_width="@dimen/wide_button"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/save_button"
            android:textSize="@dimen/text_size_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categorySelectedColourView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>