<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentExpenses">

    <TextView
        android:id="@+id/expensesHeadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/expenses_heading"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="@dimen/wide_button"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/add_expense_button"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesHeadingTextView" />

        <ListView
            android:id="@+id/recentExpensesListView"
            android:layout_width="@dimen/list_view_width"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentExpenseTextView" />

    <TextView
        android:id="@+id/recentExpenseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/recent_expenses_text"
        android:textSize="@dimen/text_size_subheading"
        app:layout_constraintStart_toStartOf="@+id/addExpenseButton"
        app:layout_constraintTop_toBottomOf="@+id/addExpenseButton" />

    <Button
        android:id="@+id/viewAllExpensesButton"
        android:layout_width="@dimen/wide_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/view_all_expenses"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentExpensesListView" />

</androidx.constraintlayout.widget.ConstraintLayout>