<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentExpenses">

        <TextView
            android:id="@+id/categoriesHeadingTextVew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/categories_heading"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_heading"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myCategoriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/my_categories_subheading"
            android:textSize="@dimen/text_size_subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCategoryButton" />

        <Button
            android:id="@+id/addCategoryButton"
            android:layout_width="@dimen/wide_button"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_category_button"
            android:textSize="@dimen/text_size_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoriesHeadingTextVew" />

        <ListView
            android:id="@+id/categoriesListView"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/myCategoriesTextView"
            app:layout_constraintTop_toBottomOf="@+id/myCategoriesTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>